--- a/manifest.json
+++ b/manifest.json
@@ -11,6 +11,12 @@
   },
   "permissions": [
     "activeTab",
-    "tabs"
-  ]
+    "tabs",
+    "storage"
+  ],
+
+  "background" : {
+    "scripts": ["eventPage.js"],
+    "persistent": false
+  }
 }
