--- a/manifest.json
+++ b/manifest.json
@@ -6,9 +6,10 @@
   "version": "1.0",
 
   "browser_action": {
-    "default_icon": "icon.png",
+    "default_icon": "icon128.png",
     "default_popup": "popup.html"
   },
+
   "permissions": [
     "activeTab",
     "tabs",
@@ -18,5 +19,14 @@
   "background" : {
     "scripts": ["eventPage.js"],
     "persistent": false
+  },
+
+ "options_ui": {
+  "page": "options.html",
+  "chrome_style": true
+  },
+
+  "icons" : {
+    "128" :  "icon128.png"
   }
 }
