working with site and time tracker objects

--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,7 @@
   ],
 
   "background" : {
-    "scripts": ["eventPage.js"],
+    "scripts": ["TimeTracker.js", "Site.js", "eventPage.js"],
     "persistent": false
   },
 
