--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,21 @@
 {
   "manifest_version": 2,
 
-  "name": "Time Waste Extension",
-  "description": "This extension gives a breakdown of time wasted on certain websites.",
+  "name": "Gauge",
+  "description": "This extension gives a breakdown of time spent on certain websites.",
   "version": "1.0",
+
+  "permissions": [
+    "tabs",
+    "activeTab",
+    "storage",
+    "idle"
+  ],
 
   "browser_action": {
     "default_icon": "icon128.png",
     "default_popup": "popup.html"
   },
-
-  "permissions": [
-    "activeTab",
-    "tabs",
-    "storage"
-  ],
 
   "background" : {
     "scripts": ["TimeTracker.js", "Site.js", "eventPage.js"],
